k8s/backend.yaml
# Managed through Kubernetes manifests
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault


      containers:
        - name: backend
          image: ghcr.io/saeed0000000/finance-devops-lab-api:6bcafa01de3b4ac1b7fdb5754cba930d4c4be4d3
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: tmp
              mountPath: /tmp




          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5


      volumes:
        - name: tmp
          emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
