k8s/frontend.yaml
# Managed through Kubernetes manifests
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: frontend
          image: ghcr.io/saeed0000000/finance-devops-lab-web:6bcafa01de3b4ac1b7fdb5754cba930d4c4be4d3
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 20

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          volumeMounts:
            - name: nginx-run
              mountPath: /run

            - name: nginx-cache
              mountPath: /var/cache/nginx

            - name: nginx-logs
              mountPath: /var/log/nginx

            - name: tmp
              mountPath: /tmp

      volumes:
        - name: nginx-run
          emptyDir: {}

        - name: nginx-cache
          emptyDir: {}

        - name: nginx-logs
          emptyDir: {}

        - name: tmp
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
