k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: db
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: postgres
          image: postgres:16-alpine

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 5432

          startupProbe:
            exec:
              command:
                - pg_isready
                - -U
                - finance
                - -d
                - finance
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - finance
                - -d
                - finance
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

            - name: postgres-run
              mountPath: /var/run/postgresql

            - name: tmp
              mountPath: /tmp

            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d/001-init.sql
              subPath: init.sql

      volumes:
        - name: postgres-run
          emptyDir: {}

        - name: tmp
          emptyDir: {}

        - name: init-sql
          configMap:
            name: postgres-init

  volumeClaimTemplates:
    - metadata:
        name: postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 5Gi
